--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teste-api-ebac",
   "version": "1.0.0",
-  "description": "",
+  "description": "-Node.js - Você encontra em: https://nodejs.org/en/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "cypress": "^13.6.0",
-    "joi": "^17.12.0"
+    "joi": "^17.11.0"
   }
 }
